Prevent cards to be too narrow

--- a/src/static/site/css/main.css
+++ b/src/static/site/css/main.css
@@ -33,12 +33,14 @@ body {
 
 .ontask-card {
   cursor: pointer;
+  min-width: 200px;
   max-width: 350px;
   margin-bottom: 15px;
 }
 
 .ontask-ccard {
   cursor: pointer;
+  min-width: 200px;
   max-width: 300px;
 }
 
